# zipalign-android

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/muntashirakon/zipalign/test/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
zipalign/: build.gradle
zipalign/src/main/: AndroidManifest.xml
zipalign/src/main/cpp/: CMakeLists.txt  ZipAlign.cpp
zipalign/src/main/cpp/android/native/include/utils/: Compat.h
zipalign/src/main/cpp/android/native/src/utils/: ZipUtils.cpp
zipalign/src/main/cpp/zipalign/: ZipAlign.cpp  ZipEntry.cpp  ZipFile.cpp  ZipFile.h
zipalign/src/main/cpp/zipalign/include/zipalign/: ZipAlign.h
zipalign/src/main/java/io/github/muntashirakon/zipalign/: ZipAlign.java
